renamed project from blueprint to prototype
